# herebedragons

./: .gitignore  .gitmodules  CONTRIBUTING.md  GALLERY.md  LICENSE  README.md
cycles/: README.md
dx11/: DragonDX11.vcxproj  DragonDX11.vcxproj.filters  README.md  Renderer.cpp  Renderer.hpp  main.cpp
dx11/helpers/: Log.cpp
dx11/resources/shaders/: LitPixelShader.cso  LitVertexShader.cso  ShadowVertexShader.cso  UnlitPixelShader.cso  UnlitVertexShader.cso
dx11/shaders/: LitPixelShader.hlsl  LitVertexShader.hlsl  ShadowVertexShader.hlsl  UnlitPixelShader.hlsl
dx12/: DescriptorAllocator.cpp  DescriptorAllocator.hpp  DragonDX12.vcxproj  DragonDX12.vcxproj.filters  GPU.cpp  GPU.hpp  Pipeline.cpp  Pipeline.hpp  README.md  Renderer.cpp  Renderer.hpp  main.cpp
dx12/helpers/: Log.hpp  MeshUtilities.cpp  MeshUtilities.hpp  Resources.hpp
dx12/resources/shaders/: BlurComputeShader.cso  LitPixelShader.cso  LitVertexShader.cso  MipmapComputeShader.cso  ShadowPixelShader.cso  ShadowVertexShader.cso  UnlitPixelShader.cso  UnlitVertexShader.cso
dx12/shaders/: BlurComputeShader.hlsl  LitPixelShader.hlsl  LitVertexShader.hlsl  MipmapComputeShader.hlsl  ShadowPixelShader.hlsl  ShadowVertexShader.hlsl  UnlitVertexShader.hlsl
dx9/: DragonDX9.vcxproj  DragonDX9.vcxproj.filters  README.md  Renderer.cpp  Renderer.hpp  main.cpp
dx9/helpers/: Log.hpp  Resources.cpp
dx9/resources/shaders/: LitPixelShader.cso  LitVertexShader.cso  ShadowPixelShader.cso  ShadowVertexShader.cso  UnlitPixelShader.cso  UnlitVertexShader.cso
dx9/shaders/: LitPixelShader.hlsl  LitVertexShader.hlsl  ShadowPixelShader.hlsl  ShadowVertexShader.hlsl  UnlitPixelShader.hlsl  UnlitVertexShader.hlsl
gba/: DragonGBA.gba  Makefile  README.md
gba/source/: data.h  data_bg0.c  data_bg1.c  data_bg2.c  data_dragon.c  data_monkey.c  data_sun.c  main.c
glide/: Makefile  README.md
glide/glide3/: dxe.c
glide/glide3/include/: 3dfx.h  glide.h  glidesys.h  glideutl.h  sst1vid.h
glide/glide3/lib/: glide3x.dxe  symbols.txt
glide/src/: geometry.c  geometry.h  glide_helpers.c  glide_helpers.h  keyboard.c  keyboard.h  main.c  scene.c  scene.h
glide/src/resources/: cube_data.h  cubemap_texture.h  dragon_data.h  dragon_texture.h  floor_texture.h  monkey_data.h  monkey_texture.h  plane_data.h  (+1 more)
glsl/: README.md  dragon_bonzomatic.glsl  dragon_shadertoy.glsl
godot/: CameraControls.gd  MainScene.tscn  README.md  icon.svg.import  project.godot
metal/: README.md
metal/DragonMetal/: AppDelegate.swift  Camera.swift  GameViewController.swift  Info.plist  MatrixUtilities.swift  Mesh.swift  Object.swift  Renderer.swift  SceneObject.swift  Shaders.metal  SkyboxObject.swift  TextureUtilities.swift  Uniforms.swift
metal/DragonMetal.xcodeproj/: project.pbxproj
nds/: Makefile  README.md  dragonNDS.nds
nds/source/: dragon_color.h  dragon_geometry.h  dragon_shadow_geometry.h  main.cpp  plane_and_skybox_geometry.h  plane_color.h  skybox_color.h  suzanne_color.h  suzanne_geometry.h
opengl/: .gitignore  GL_Template.vcxproj  GL_Template.vcxproj.filters  Makefile  Makefile.linux  README.md
opengl/GL_Template.xcodeproj/: project.pbxproj
opengl/src/: AmbientQuad.cpp  AmbientQuad.h  Framebuffer.cpp  Framebuffer.h  Gbuffer.cpp  Gbuffer.h  Object.cpp  Object.h  Renderer.cpp  Renderer.h  ScreenQuad.cpp  ScreenQuad.h  Skybox.cpp  Skybox.h  main.cpp
pico8/: README.md  herebedragons.p8
pico8/output/: herebedragons.html  herebedragons.js
pico8/resources/: dragon-body.mtl  dragon-head.mtl  suzanne-back.mtl  suzanne-front.mtl
ps2/: DragonPS2.elf  Makefile  README.md
ps2/resources/: object_program.vcl  skybox_program.vcl
ps2/src/: Draw.cpp  Draw.hpp  Object.cpp  Object.hpp  Pad.cpp  Pad.hpp  Scene.cpp  Scene.hpp  Skybox.cpp  Skybox.hpp  data.h  dragon.cpp  transform.c  transform.h
ptah/: README.md
scenekit/: README.md
scenekit/DragonSceneKit-iOS/: AppDelegate.swift  GameViewController.swift  Info.plist
scenekit/DragonSceneKit-macOS/: AppDelegate.swift  GameViewController.swift
scenekit/DragonSceneKit.xcodeproj/: project.pbxproj
scenekit/art.scnassets/: DragonScene.scn
unity/: README.md
unity/Assets/: DragonScene.unity  SuzanneRotation.anim  suzanne.controller
unity/ProjectSettings/: AudioManager.asset  ClusterInputManager.asset  DynamicsManager.asset  EditorBuildSettings.asset  EditorSettings.asset  GraphicsSettings.asset  InputManager.asset  NavMeshAreas.asset  NetworkManager.asset  Physics2DSettings.asset  PresetManager.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset  TimeManager.asset  UnityAdsSettings.asset  UnityConnectSettings.asset  VFXManager.asset
unreal/: README.md
unreal/DragonUnreal/: .gitignore  DragonUnreal.uproject
vectrex/: Makefile  README.md  dragon.c  resources.h
vectrex/resources/: processObjects.cpp  scene-vectrex.blend
vulkan/: DragonVulkan.vcxproj  DragonVulkan.vcxproj.filters  README.md
vulkan/DragonVulkan.xcodeproj/: project.pbxproj
vulkan/libs/glm/: .gitignore  .travis.yml  CMakeLists.txt  readme.md
vulkan/src/: Object.cpp  Object.hpp  PipelineUtilities.cpp  PipelineUtilities.hpp  Renderer.cpp  Renderer.hpp  ShadowPass.cpp  ShadowPass.hpp  Skybox.cpp  Skybox.hpp  Swapchain.cpp  Swapchain.hpp  VulkanUtilities.cpp  VulkanUtilities.hpp  common.hpp  main.cpp
webgl/: README.md  index.html  webgl-demo.js  webgl-shaders.js  webgl-utilities.js
webgl/helpers/: utilities.js  webgl-obj-loader.js
webgpu/: CMakeLists.txt  README.md
webgpu/libs/glfw3webgpu/: CMakeLists.txt  glfw3webgpu.c  glfw3webgpu.h
webgpu/libs/glm/: .appveyor.yml  manual.md
webgpu/libs/webgpu/: CMakeLists.txt  LICENSE.txt  README.md
webgpu/libs/webgpu/cmake/: FetchDawn.cmake
webgpu/resources/shaders/: mipmap.wgsl  object.wgsl  skybox.wgsl
webgpu/src/: GPU.cpp  GPU.hpp  Object.cpp  Object.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  common.hpp  main.cpp
webgpu/src/input/: Camera.hpp  ControllableCamera.cpp  ControllableCamera.hpp  Input.hpp
webgpu/src/resources/: MeshUtilities.cpp  MeshUtilities.hpp  Resources.cpp  Resources.hpp  stb_image.h
(+193 files in other folders)
